# ai-api-dialens

./: .env.example  .railwayignore  Makefile  README.md  pyproject.toml  railway.toml
apps/: __init__.py  main.py
apps/src/: dependencies.py  explain.py  llm.py  model.py  prompt.py  routes.py  schemas.py  services.py
artifacts/: best_weights.weights.h5  history.json  scaler_inference.pkl  shap_explainer.pkl
data/: data_test_unscaled.csv
scripts/: smoke_check.py
